--- a/src/app/pages/tutorial/tutorial.html
+++ b/src/app/pages/tutorial/tutorial.html
@@ -16,30 +16,30 @@
       </h2>
       <p>
         The
-        <b>ionic conference app</b> is a practical preview of the ionic framework in action, and a demonstration of proper code
+        <b>Maliek News</b> is a practical preview of the ionic best news in action, and a demonstration of proper code
         use.
       </p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-2.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic?</h2>
+      <h2 class="slide-title">What is Maliek News?</h2>
       <p>
-        <b>Ionic Framework</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies
+        <b>Maliek News</b> is an open source SDK that enables developers to build high quality mobile apps with web technologies
         like HTML, CSS, and JavaScript.</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-3.png" class="slide-image" />
-      <h2 class="slide-title">What is Ionic Appflow?</h2>
+      <h2 class="slide-title">What is News Appflow?</h2>
       <p>
-        <b>Ionic Appflow</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new
+        <b>News Appflow</b> is a powerful set of services and features built on top of Ionic Framework that brings a totally new
         level of app development agility to mobile dev teams.</p>
     </ion-slide>
 
     <ion-slide>
       <img src="assets/img/ica-slidebox-img-4.png" class="slide-image" />
-      <h2 class="slide-title">Ready to Play?</h2>
+      <h2 class="slide-title">Ready to open app ?</h2>
       <ion-button fill="clear" (click)="startApp()">
         Continue
         <ion-icon slot="end" name="arrow-forward"></ion-icon>
