--- a/src/app/pages/map/map.html
+++ b/src/app/pages/map/map.html
@@ -8,5 +8,9 @@
 </ion-header>
 
 <ion-content>
-  <div #mapCanvas class="map-canvas"></div>
+  
+  <div class="container">
+  <ion-button (click)="presentActionSheet()">Open</ion-button>
+  <code *ngIf="result"> {{ result }} </code>
+</div>
 </ion-content>
